# django-sage-invoice

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/source/: conf.py  index.rst
docs/source/getting_started/: admin.rst  index.rst  installation.rst  models.rst  modules.rst
requirements/: requirements-dev.txt  requirements.txt
sage_invoice/: apps.py  check.py  resource.py  signals.py  urls.py
sage_invoice/admin/: __init__.py  category.py  invoice.py
sage_invoice/admin/actions/: __init__.py  download_html.py  download_pdf.py  show.py
sage_invoice/api/: urls.py
sage_invoice/api/helpers/: versioning.py
sage_invoice/api/mixins/: __init__.py  exception.py
sage_invoice/api/serializers/: __init__.py  category.py  column.py  expense.py  invoice.py  item.py
sage_invoice/api/views/: __init__.py  category.py  column.py  expense.py  invoice.py  item.py
sage_invoice/helpers/: choice.py  funcs.py
sage_invoice/locale/ar/LC_MESSAGES/: django.po
sage_invoice/locale/en/LC_MESSAGES/: django.po
sage_invoice/locale/fa/LC_MESSAGES/: django.po
sage_invoice/migrations/: 0001_initial.py  0002_alter_invoice_template_choice.py  0003_alter_expense_invoice_alter_invoice_category_and_more.py  0003_alter_item_quantity.py  0004_alter_expense_invoice.py
sage_invoice/models/: __init__.py  category.py  column.py  customer.py  expense.py  invoice.py  invoice_category.py  invoice_column.py  invoice_item.py  invoice_total.py  item.py
sage_invoice/service/: discovery.py  invoice_create.py  total.py
sage_invoice/static/assets/css/: style.css
sage_invoice/static/assets/js/: invoice_admin.js  main.js
sage_invoice/templates/: download_invoices.html  quotation1.html  quotation2.html  quotation3.html  quotation_2.html  quotation_4.html  receipt1.html  receipt2.html  receipt3.html
sage_invoice/templates/default_invoices/: quotation_1.jinja2  quotation_2.jinja2  quotation_3.jinja2  quotation_4.jinja2  receipt2.jinja2  receipt3.jinja2
sage_invoice/templates/sage_invoice/: invoice1.jinja2  invoice2.jinja2  receipt1.jinja2
sage_invoice/templatetags/: custom_filters.py
sage_invoice/tests/: test_check.py  test_helpers.py  test_resource.py  test_service.py  test_signal.py
sage_invoice/tests/testapp/settings/: settings.py
sage_invoice/views/: invoice.py
